--- a/packages/suite-data/src/browser-detection/styles.css
+++ b/packages/suite-data/src/browser-detection/styles.css
@@ -22,6 +22,7 @@ body {
     padding: 0;
     font-size: 48px;
     font-weight: 500;
+    width: 90%;
 }
 
 .subtitle {
@@ -30,6 +31,7 @@ body {
     opacity: 0.5;
     margin-bottom: 75px;
     margin-top: 15px;
+    width: 90%;
 }
 
 .button {
@@ -74,7 +76,7 @@ body {
 }
 
 .image {
-    height: 85px;
+    height: 68px;
     margin-top: 29px;
 }
 
